# Document-To-Speech

./: .gitignore  README.md  pyproject.toml
demo/: app.py
docs/: api.md  cli.md  customization.md  future-features-contributions.md  getting-started.md  index.md  step-by-step-guide.md
src/document_to_podcast/: cli.py  config.py  types.py
src/document_to_podcast/inference/: model_loaders.py  text_to_speech.py
src/document_to_speech/: cli.py  config.py
src/document_to_speech/inference/: local_llm_optimizer.py  model_loaders.py  openrouter_optimizer.py  text_optimizer.py  text_to_speech.py
src/document_to_speech/preprocessing/: data_cleaners.py  data_loaders.py
tests/e2e/: test_document_to_podcast.py
tests/integration/: test_data_load_and_clean.py  test_url_input.py
tests/unit/inference/: test_model_loaders.py  test_text_to_speech.py  test_text_to_text.py
tests/unit/preprocessing/: test_data_cleaners.py  test_data_loaders.py
